# Information-Retrieval

./: .clang-format  .gitignore  README.md
final/: CMakeLists.txt  a.html  a.sh  b.sh  cele.json  crawler.sh  inverted.txt  main  main.cpp  res.json  sh_timer.service  sh_timer.timer  stem_test.cpp  test  test.cpp  ws.cpp
final/include/cppjieba/: Trie.hpp
final/include/limonp/: Closure.hpp  Condition.hpp  Config.hpp  NonCopyable.hpp
final/txts/dzbgs/: 486047  486568  486739  487180  487351
final/txts/jwb/: 484659  485648  485776  485974  486115
final/txts/kxjsb/: 485452  485998  486379  487012  487199
final/txts/yjsy/: 483594  485097  486131  486820
final/txts/zsbgs/: 472494  473817  478721
final/txts_1/dzbgs/: 484830  486046  486230  486242  486280  486281  486424  486468  486480  486570  486660  486730  486824  486942  486945  487022  487099  487137  487148  487155  487173  487177  487305  487331
final/txts_1/jwb/: 440008  463979  484627  485073  485454  485670  485701  485716  485892  486117  486233  486245  486557  486559  486687  486695  486773  486791  486808  486984  487036  487037  487117  487318
final/txts_1/kxjsb/: 482522  483932  484082  484162  484229  484258  484358  484554  484606  484773  484991  485636  485962  486716  487016  487029  487285  487343
final/txts_1/yjsy/: 482295  484081  484287  484785  484786  484789  484826  485124  485183  485700  486116  486336  486383  486466  486680  486931  486999  487027  487032  487059  487194
final/txts_1/zsbgs/: 470972  471067  471999  474532  474561  476341  476920  477341  477342  477355  (+14 more)
(+196 files in other folders)
